svc_v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: stable-service
spec:
  selector:
    app: stable
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
