svc_v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-service
spec:
  selector:
    app: canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
